Cambios de disenio y add eliminar producto y marcas

--- a/App4.2/App4.2/Pages/Security/MainPage.xaml
+++ b/App4.2/App4.2/Pages/Security/MainPage.xaml
@@ -6,7 +6,7 @@
     </MasterDetailPage.Master>
     
     <MasterDetailPage.Detail>
-        <NavigationPage BarBackgroundColor="#003B80" BarTextColor="#FFFFFF">
+        <NavigationPage BarBackgroundColor="#ff3399" BarTextColor="#FFFFFF">
             <x:Arguments>
             </x:Arguments>
         </NavigationPage>
