--- a/App4.2/App4.2/App.xaml
+++ b/App4.2/App4.2/App.xaml
@@ -3,6 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App4._2.App">
     <Application.Resources>
-
+        <ResourceDictionary>
+            <Style TargetType="NavigationPage">
+                <Setter Property="BarBackgroundColor" Value="Color.Red"/>
+                <Setter Property="BarTextColor" Value="Color.White"/>
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
