--- a/App4.2/App4.2/Pages/Security/MasterPage.xaml
+++ b/App4.2/App4.2/Pages/Security/MasterPage.xaml
@@ -36,7 +36,7 @@
                                    HorizontalOptions="Center"
                                    
                                    VerticalOptions="Center"
-                                    Source="logo.png"
+                                    Source="maquillaje.png"
                                    WidthRequest="50" />
                             </Frame> 
        
